deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dxcon
  labels:
    app.kubernetes.io/name: dxcon
