deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dxcon-api
  namespace: dxcon
spec:
  selector:
    app: dxcon-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
